# tradestream

./: .bazelrc  .bazelversion  .cursorrules  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARGOCD_SETUP.md  BUILD  CHANGELOG.md  CLAUDE.md  Dockerfile  GA_EXTRACTION.md  IMPLEMENTATION_PLAN.md  LICENSE  MODULE.bazel  PROMPT_build.md  PROMPT_plan.md  README.md  WORKFLOW_SIMPLIFICATION.md  WORKSPACE  docker-compose.dev.yml  docker-compose.yml  influxdb-candle-ingestor-credentials-secret.yaml  progress.txt  pyproject.toml  requirements.in  requirements_lock.txt  strategy_discovery_pipeline_logs.txt  test-argocd-update.sh  test_strategy_ui.py  test_ui.py  version.json
.github/: BRANCH_PROTECTION.md
.github/workflows/: bazel-mod-tidy.yaml  bazel-test.yaml  check-docs.yaml  ci.yaml  ci.yml  docker.yml  format-java-code.yaml  format-kotlin-code.yaml  format-python-code.yaml  format-python-files.yaml  format-starlark-code.yaml  format-yaml-code.yaml  helm-check.yaml  merge-gate.yaml  release.yaml  update-python-requirements.yaml
3. charts/tradestream/: values.yaml
backtesting/: BUILD  ga_service.py  ga_service_test.py  optimization.py  optimization_test.py
charts/: README.md
charts/tradestream/: Chart.yaml  values.yaml
config/: retention.yaml
database/: BUILD  FlywayMigrator.java  README.md
database/alembic/: BUILD  Dockerfile  alembic.ini  alembic_test.py  env.py  run_migrations.py
database/migrations/: V10__add_liquidity_scores.sql  V10__add_managed_positions.sql  V10__add_polymarket_tables.sql  V10__add_portfolio_snapshots.sql  V10__add_risk_snapshots.sql  V10__add_signal_audit_log.sql  V10__add_signal_reasoning.sql  V10__add_tax_lots.sql  V10__add_trading_fees.sql  V11__add_auth_tables.sql  V11__add_backtests.sql  V11__add_consensus_signals.sql  V11__add_correlation_tables.sql  V11__add_fee_tables.sql  V11__add_learning_engine_tables.sql  V11__add_rebalance_tables.sql  V11__add_strategy_health_checks.sql  V11__add_strategy_versions.sql  V11__add_trade_journal.sql  V11__add_webhooks.sql  V11__price_alerts.sql  V11__seed_phase1_strategy_specs.sql  V12__seed_phase1_strategy_specs.sql  V13__seed_phase1_batch2_medium_strategy_specs.sql  V14__add_signal_subscriptions.sql  V15__add_billing_and_subscription_tiers.sql  V16__seed_phase4_complex_strategy_specs.sql  V17__add_signal_quality_and_beta_onboarding.sql  V18__add_tradingview_integration.sql  V19__add_strategy_marketplace_leaderboard.sql  V1__baseline_strategies_table.sql  V20__add_asset_class_multi_asset_support.sql  V21__add_learning_engine_regime_tables.sql  V22__add_user_strategy_builder.sql  V23__add_multi_channel_delivery.sql  V24__add_janitor_agent_tables.sql  V26__add_strategy_knowledge_graph.sql  V27__add_agent_decisions.sql  V29__add_paper_trading_sessions.sql  V2__add_strategy_specs.sql  (+17 more)
db/migrations/: V5.1__agent_decisions_gin.sql  V5.2__decision_outcomes.sql  V5.3__agent_decisions_partitions.sql  V5__agent_decisions.sql
deploy/: Chart.yaml
dev/ralph-loop/: .ralphrc.example  IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_plan.md  README.md  ralph.sh
docs/: argocd-strategy-monitor-fix.md  beam-flink-java21-migration.md  signal-service-design.md  sprint-plan-revenue.md  strategic-assessment.md
docs/api/: getting-started.md  index.html  integration-discord.md  integration-telegram.md  integration-tradingview.md
docs/strategies/: adding-new-strategy.md
experiments/llm_validation/: BUILD  README.md  llm_generator.py  requirements.txt  strategy_schema.py  test_strategy_schema.py
protos/: BUILD  README.md  backtest_service.proto  backtesting.proto  discovery.proto  marketdata.proto  polymarket.proto  prediction_markets.proto  signal_reasoning.proto  signals.proto  strategies.proto  trade_signals.proto
scripts/: smoke-test.sh  update-image-tags.sh  validate-workflows.sh
services/: README.md
services/admin_dashboard_api/: app.py  app_test.py  main.py
services/agent_gateway/: BUILD  __init__.py  container-structure-test.yaml  kafka_pubsub.py  llm_integration_test.py  main.py  main_test.py  requirements.txt
services/agent_orchestration/: BUILD  config.py  container-structure-test.yaml  dashboard.py  discovery.py  main.py  monitoring.py  orchestration_loop.py  promotion.py  resilience.py  state.py  validation.py
services/agents/: BUILD  README.md  base.py  base_test.py  mcp_client.py  mcp_client_test.py  openrouter_client.py  openrouter_client_test.py  pyproject.toml
services/alert_api/: BUILD  app.py  app_test.py  engine.py  engine_test.py  main.py
services/alert_router/: BUILD  alert_router_test.py  app.py  channels.py  config.py  container-structure-test.yaml  main.py  models.py  router.py
services/alert_rules_engine/: BUILD  actions.py  alert_rules_engine_test.py  conditions.py  config.py  engine.py  main.py  models.py  rule_store.py
services/allocation_optimizer/: BUILD  app.py  app_test.py  covariance.py  main.py  models.py  optimizer.py
services/api_docs/: BUILD  app.py  app_test.py  main.py  openapi_spec.py  spec_backtesting.py  spec_billing.py  spec_integrations.py  spec_marketplace.py  spec_opportunities.py  spec_signals.py  spec_users.py
services/api_key_api/: app.py  app_test.py  main.py
services/audit_trail/: BUILD  app.py  app_test.py  main.py  models.py  query.py  recorder.py
services/auth_api/: BUILD  app.py  app_test.py  auth_service.py  auth_service_test.py  main.py
services/autonomous_runner/: BUILD  adaptive_scheduler.py  adaptive_scheduler_test.py  batch_processor.py  batch_processor_test.py  config.py  container-structure-test.yaml  (+42 more)
services/market_mcp/: BUILD  Dockerfile  README.md  container-structure-test.yaml  influxdb_client.py  influxdb_client_test.py  main.py  pyproject.toml  redis_client.py  redis_client_test.py  server.py  server_test.py
services/strategy_mcp/: BUILD  Dockerfile  README.md  container-structure-test.yaml  main.py  postgres_client.py  postgres_client_test.py  pyproject.toml  server.py  server_test.py
shared/: BUILD  README.md  config.py  config_test.py
specs/: README.md
src/: README.md
ui/: README.md
(+2506 files in other folders)
