module(
    name = "tradestream",
    version = "v0.35.0-develop",
    compatibility_level = 1,
)

# Existing dependencies
bazel_dep(name = "aspect_bazel_lib", version = "2.8.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "container_structure_test", version = "1.16.0")
bazel_dep(name = "protobuf", repo_name = "com_google_protobuf", version = "29.1")
bazel_dep(name = "rules_java", version = "8.5.1")
bazel_dep(name = "rules_jvm_external", version = "6.5")
bazel_dep(name = "rules_kotlin", version = "2.1.3")
bazel_dep(name = "rules_oci", version = "2.2.3")

# Add Java toolchain configuration
JAVA_LANGUAGE_LEVEL = "17"

java = use_extension("@rules_java//java:extensions.bzl", "java")
java.toolchain(
    name = "java",
    java_runtime = "@rules_java//toolchains:remotejdk_17",
    source_version = JAVA_LANGUAGE_LEVEL,
    target_version = JAVA_LANGUAGE_LEVEL,
)
use_repo(java, "java_tools")

# Register Java toolchains
register_toolchains(
    "@rules_java//toolchains:all",
)

# Configure Maven dependencies
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "tradestream_maven",
    artifacts = [
        "com.google.auto.factory:auto-factory:1.1.0",
        "com.google.auto.value:auto-value:1.11.0",
        "com.google.auto.value:auto-value-annotations:1.11.0",
        "com.google.code.gson:gson:2.11.0",
        "com.google.flogger:flogger:0.8",
        "com.google.flogger:flogger-system-backend:0.8",
        "com.google.guava:guava:33.4.0-jre",
        "com.google.inject.extensions:guice-assistedinject:7.0.0",
        "com.google.inject:guice:7.0.0",
        "com.google.mug:mug:8.2",
        "com.google.mug:mug-guava:8.2",
        "com.google.mug:mug-protobuf:8.2",
        "com.google.protobuf:protobuf-java:4.29.2",
        "com.google.protobuf:protobuf-java-util:4.29.2",
        "com.ryanharter.auto.value:auto-value-gson:1.3.1",
        "com.ryanharter.auto.value:auto-value-gson-annotations:0.8.0",
        "com.ryanharter.auto.value:auto-value-gson-factory:1.3.1",
        "io.jenetics:jenetics:7.2.0",
        "io.reactivex.rxjava3:rxjava:3.1.6",
        "javax.inject:javax.inject:1",
        "net.sourceforge.argparse4j:argparse4j:0.9.0",
        "org.apache.beam:beam-runners-direct-java:2.62.0",
        "org.apache.beam:beam-runners-flink-1.18:2.62.0",
        "org.apache.beam:beam-sdks-java-core:2.62.0",
        "org.apache.beam:beam-sdks-java-extensions-protobuf:2.62.0",
        "org.apache.beam:beam-sdks-java-io-kafka:2.62.0",
        "org.apache.beam:beam-sdks-java-test-utils:2.62.0",
        "org.apache.kafka:kafka-clients:3.6.1",
        "org.hamcrest:hamcrest:3.0",
        "org.knowm.xchange:xchange-coinbasepro:5.2.0",
        "org.knowm.xchange:xchange-core:5.2.0",
        "org.knowm.xchange:xchange-stream-core:5.2.0",
        "org.knowm.xchange:xchange-stream-coinbasepro:5.2.0",
        "org.ta4j:ta4j-core:0.17",

        # Test Dependencies
        "com.google.inject.extensions:guice-testlib:7.0.0",
        "com.google.testparameterinjector:test-parameter-injector:1.9",
        "com.google.truth:truth:1.4.4",
        "junit:junit:4.13.2",
        "org.mockito:mockito-core:4.3.1",
    ],
    fetch_sources = True,
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://jcenter.bintray.com/",
        "https://packages.confluent.io/maven/",
    ],
)
use_repo(maven, "tradestream_maven")

# Configure OCI dependencies
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "openjdk_java",
    digest = "sha256:b76af3b248acbcd94ffae671900e9fa8e2f869688598e5733a5fb6e983e51928",
    image = "docker.io/library/openjdk",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)

use_repo(oci, "openjdk_java")

oci.pull(
    name = "flink_java17",
    image = "docker.io/library/flink:1.18-java17",
    digest = "sha256:e3836db6fbdf5186156cebe9aaa9a8d7a6edfa43450476faa1224fae8d5c4b80",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)

use_repo(oci, "flink_java17")

# Configure Bazel libraries
bazel_lib = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
bazel_lib.jq()
bazel_lib.tar()
use_repo(bazel_lib, "bsd_tar_toolchains", "jq_toolchains")
