[project]
name = "tradestream-agents"
version = "0.1.0"
description = "Agent framework scaffolding for TradeStream LLM agents"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "requests>=2.28.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
