[project]
name = "strategy-mcp"
version = "0.1.0"
description = "MCP server for strategy queries — exposes tools over PostgreSQL for strategy specs, implementations, performance, and walk-forward results."
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29.0",
    "mcp>=1.0.0",
    "tenacity>=8.2.0",
    "absl-py>=2.0.0",
    "uvicorn>=0.24.0",
    "starlette>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
